  * Made the version parsing much more reliable; it wasn't properly coping
    with four-part version numbers. This affects any program whose build
    scripts use xine-lib's automake macros.
  * Fixed an off-by-one in the FLAC security fix patch. This breakage was
    causing failure to play some files.
  * Support 16-bit big-endian DTS audio.
  * Improved frame snapshot API. (ABI extension.)

xine-lib (1.1.10.1) 2008-02-07
  * Security fixes:
    - Array index vulnerability which may allow remote attackers to execute
      arbitrary code via a crafted FLAC tag, causing a stack buffer overflow.
      (CVE-2008-0486)
  * Fix a RealPlayer codec detection bug.
  * Improve detection of MP3 streams with ID3v2 tags. Don't trust the tag
    size.

xine-lib (1.1.10) 2008-01-26
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code or crash the client program via a crafted ASF header. 
      (Related to CVE-2006-1664)
  * Update Ogg and Annodex mimetypes and extensions.
  * Change the default v4l device paths to /dev/video0 and /dev/radio0.
  * Fix support for subtitles with schemes (e.g. http://), partly broken
    since 1.1.8.
  * Unescape the filename in "#save:". This allows filenames to contain ';'
    etc. without ambiguity, e.g. "#save:foo%3B1.ts" -> "foo;1.ts", but front
    end authors should be careful with xine-lib older than 1.1.10.
  * Backported xine-config & libxine.pc from 1.2.
    Consequently, xine-config now requires pkg-config.
  * Don't discard audio samples forever. Fixed streaming playback.
  * Fix a possible crash on channel change in the DVB plugin.
  * Flash video demuxer improvements and bug fixes.
  * Make the V4L ALSA audio input device configurable. (This needs more work.)

xine-lib (1.1.9.1) 2008-01-11
  * Security fixes:
    - Buffer overflow which allows a remote attacker to execute arbitrary
      code via a crafted SDP Abstract attribute.
      (CVE-2008-0225, a.k.a. CVE-2008-0238)