@@ -266,7 +266,7 @@ Text subtitle files may be appended to the MRL:.
 This is the normal way to define the subtitle file to use. The frontend will
 not take any notice of the subtitle file. For example:
 .br
-.I file://home/user/wibble.mpg#subtitles:/home/user/wibble.sub
+.I file://home/user/wibble.mpg#subtitle:/home/user/wibble.sub
 .br
 (Note that some front ends can detect subtitles files where the name differs
 as shown in the example.)
